<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="28dp"
    android:layout_marginTop="22dp"
    android:layout_marginEnd="28dp"
    android:layout_marginBottom="18dp"
    android:background="@color/black">

    <TextView
        android:id="@+id/textView"
        style="@style/CashBitText.CaptionSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_amount"
        style="@style/CashBitText.CaptionMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="14dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="$15,616"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        style="@style/CashBitText.CaptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/projected_earning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_amount" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_grow_up"
            app:tint="@color/two_purple" />

        <TextView
            android:id="@+id/txt_darsad"
            style="@style/CashBitText.CaptionSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="APY 9%"
            android:textColor="@color/two_purple" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:padding="4dp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/three_gray"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/txt_earning_day"
                style="@style/CashBitText.CaptionBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="$640" />

            <TextView
                style="@style/CashBitText.CaptionSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="8dp"
                android:text="@string/day" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/three_gray"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/txt_earning_month"
                style="@style/CashBitText.CaptionBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="$640" />

            <TextView
                style="@style/CashBitText.CaptionSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="8dp"
                android:text="@string/month" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/three_gray"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/txt_earning_year"
                style="@style/CashBitText.CaptionBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="$640" />

            <TextView
                style="@style/CashBitText.CaptionSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="8dp"
                android:text="@string/year" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="22dp"
        android:padding="8dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/add_cash"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:backgroundTint="@color/two_purple"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:src="@drawable/ic_cash_add"
                app:tint="@color/white" />

            <TextView
                style="@style/CashBitText.CaptionSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="Add Cash"
                android:textSize="12sp" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/out_cash"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:backgroundTint="@color/two_purple"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:src="@drawable/ic_cash_out"
                app:tint="@color/white" />

            <TextView
                style="@style/CashBitText.CaptionSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="Cash Out"
                android:textSize="12sp" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>